--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Ben Parisot | Full Stack JavaScript Developer</title>
+    <meta name="description" content="Ben Parisot is a full stack JavaScript developer working in the Node, React/Redux, MongoDB, and Express.">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
