--- a/public/index.html
+++ b/public/index.html
@@ -21,19 +21,10 @@
     -->
     <title>Ben Parisot | Full Stack JavaScript Developer</title>
     <meta name="description" content="Ben Parisot is a full stack JavaScript developer working in the Node, React/Redux, MongoDB, and Express.">
+    <link href="https://fonts.googleapis.com/css?family=Arvo|Maven+Pro:400,700&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
