--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     <title>Ben Parisot | Full Stack JavaScript Developer</title>
     <meta name="description" content="Ben Parisot is a full stack JavaScript developer working in the Node, React/Redux, MongoDB, and Express.">
     <link href="https://fonts.googleapis.com/css?family=Arvo|Maven+Pro:400,700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/2bd6d06940.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
