--- a/public/index.html
+++ b/public/index.html
@@ -4,25 +4,17 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>Ben Parisot | Full Stack JavaScript Developer</title>
     <meta name="description" content="Ben Parisot is a full stack JavaScript developer working in the Node, React/Redux, MongoDB, and Express.">
     <link href="https://fonts.googleapis.com/css?family=Arvo|Maven+Pro:400,700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2bd6d06940.js"></script>
+    <meta property="og:url"                content="http://www.nytimes.com/2015/02/19/arts/international/when-great-minds-dont-think-alike.html" />
+    <meta property="og:type"               content="website" />
+    <meta property="og:title"              content="Ben Parisot | Full Stack JavaScript Developer" />
+    <meta property="og:description"        content="Ben Parisot is a full stack JavaScript developer working in the Node, React/Redux, MongoDB, and Express." />
+    <!-- <meta property="og:image"              content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" /> -->
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
