--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
     <meta name="description" content="Ben Parisot is a full stack JavaScript developer working in the Node, React/Redux, MongoDB, and Express.">
     <link href="https://fonts.googleapis.com/css?family=Arvo|Maven+Pro:400,700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2bd6d06940.js"></script>
-    <meta property="og:url"                content="http://www.nytimes.com/2015/02/19/arts/international/when-great-minds-dont-think-alike.html" />
+    <meta property="og:url"                content="http://www.benparisot.com/" />
     <meta property="og:type"               content="website" />
     <meta property="og:title"              content="Ben Parisot | Full Stack JavaScript Developer" />
     <meta property="og:description"        content="Ben Parisot is a full stack JavaScript developer working in the Node, React/Redux, MongoDB, and Express." />
-    <!-- <meta property="og:image"              content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" /> -->
+    <meta property="og:image"              content="http://www.benparisot.com/og-image-tag.jpg" />
 
   </head>
   <body>
