upload new og image tag size for better fb resolution

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type"               content="website" />
     <meta property="og:title"              content="Ben Parisot | Full Stack JavaScript Developer" />
     <meta property="og:description"        content="Ben Parisot is a full stack JavaScript developer working in the Node, React/Redux, MongoDB, and Express." />
-    <meta property="og:image"              content="http://www.benparisot.com/og-image-tag.jpg" />
+    <meta property="og:image"              content="http://www.benparisot.com/og-image-tag-100.jpg" />
 
   </head>
   <body>
