--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,10 @@
     <link href="https://fonts.googleapis.com/css?family=Arvo|Maven+Pro:400,700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2bd6d06940.js"></script>
     <meta property="og:url"                content="http://www.benparisot.com/" />
-    <meta property="og:type"               content="website" />
+    <!-- <meta property="og:type"               content="website" /> -->
     <meta property="og:title"              content="Ben Parisot | Full Stack JavaScript Developer" />
     <meta property="og:description"        content="Ben Parisot is a full stack JavaScript developer working in the Node, React/Redux, MongoDB, and Express." />
-    <meta property="og:image"              content="http://www.benparisot.com/og-image-tag-100.jpg" />
+    <meta property="og:image"              content="http://www.benparisot.com/og-image-tag-200.jpg" />
 
   </head>
   <body>
