--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,15 @@
     <meta property="og:title"              content="Ben Parisot | Full Stack JavaScript Developer" />
     <meta property="og:description"        content="Ben Parisot is a full stack JavaScript developer working in the Node, React/Redux, MongoDB, and Express." />
     <meta property="og:image"              content="http://www.benparisot.com/og-image-tag-200.jpg" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145265720-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
+      gtag('config', 'UA-145265720-1');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
