--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Ben Parisot | Full Stack JavaScript Developer</title>
-    <meta name="description" content="Ben Parisot is a full stack JavaScript developer working in the Node, React/Redux, MongoDB, and Express.">
+    <meta name="description" content="Ben Parisot is a full stack JavaScript developer working in Node, React/Redux, MongoDB, and Express.">
     <link href="https://fonts.googleapis.com/css?family=Arvo|Maven+Pro:400,700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2bd6d06940.js"></script>
     <meta property="og:url"                content="http://www.benparisot.com/" />
